syntax = "proto3";
package comdex.market.v1beta1;

import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "comdex/market/v1beta1/market.proto";
import "comdex/market/v1beta1/params.proto";

option go_package = "github.com/comdex-official/comdex/x/market/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

message QueryMarketsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryMarketsResponse {
  repeated Market markets = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"markets\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryMarketRequest {
  string symbol = 1 [(gogoproto.moretags) = "yaml:\"symbol\""];
}

message QueryMarketResponse {
  Market market = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"market\""
  ];
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];
}

service Query {
  rpc QueryMarkets(QueryMarketsRequest) returns (QueryMarketsResponse) {
    option (google.api.http).get = "/comdex/market/v1beta1/markets";
  }
  rpc QueryMarket(QueryMarketRequest) returns (QueryMarketResponse) {
    option (google.api.http).get = "/comdex/market/v1beta1/markets/{symbol}";
  }
  rpc QueryParams(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/comdex/market/v1beta1/params";
  }
}
